--- a/Vehicle/app/package.json
+++ b/Vehicle/app/package.json
@@ -7,21 +7,21 @@
 		"start": "node app.js"
 	},
 	"dependencies": {
-		"express": "4.0.0",
-		"jade": "1.3.1",
-		"express-session": "1.2.1",
-		"compression": "1.4.4",
-		"serve-static": "1.9.2",
-		"morgan": "1.1.1",
-		"cookie-parser": "1.4.1",
-		"body-parser": "1.0.2",
-		"debug": "0.7.4",
-		"cors": "2.5.3",
-		"async": "1.5.0",
 		"adm-zip": "0.4.7",
-		"ws": "1.0.1",
-		"ibm-blockchain-js": "1.1.2",
-		"cfenv": "1.0.x"
+		"async": "1.5.0",
+		"body-parser": "1.0.2",
+		"cfenv": "1.0.x",
+		"compression": "1.4.4",
+		"cookie-parser": "1.4.1",
+		"cors": "2.5.3",
+		"debug": "0.7.4",
+		"express": "4.0.0",
+		"express-session": "1.2.1",
+		"ibm-blockchain-js": "^1.1.2",
+		"jade": "1.3.1",
+		"morgan": "1.1.1",
+		"serve-static": "1.9.2",
+		"ws": "1.0.1"
 	},
 	"engines": {
 		"node": "0.12.0"
