--- a/Vehicle/app/manifest.yml
+++ b/Vehicle/app/manifest.yml
@@ -3,8 +3,9 @@ applications:
 - path: .
   memory: 256M
   instances: 1
-  domain: mybluemix.net
+  domain: eu-gb.mybluemix.net
   name: vehicle-tracking
   host: vehicle-tracking
   disk_quota: 1024M
+  memory: 1024M
   command: node app.js
